# shipping-calculator

./: .credentials.example  .gitignore  AMAZON_SYNC_SETUP.md  DEMO.md  DEPLOY.md  DJANGO_BACKEND_PLAN.md  FIXES.md  GITHUB_PAGES.md  HANDOFF.md  QUICKSTART.md  README.md  SIMPLE_BACKEND_PLAN.md  index.html  package-lock.json  package.json  start-desktop.bat  start.bat  tsconfig.app.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
docs/: index.html  sample-shipments.csv
docs/assets/: AmazonFlowDemoView-B79wLKAU.js  AmazonFlowDemoView-BMTyJczT.js  AmazonFlowDemoView-BZmx1psD.js  AmazonFlowDemoView-CMLXIivc.js  AmazonFlowDemoView-DUoiyUP7.js  AmazonFlowDemoView-DuhZPy9E.css  AmazonFlowDemoView-shIhz9d8.js  AmazonSellerView-BE6EakAh.js  AmazonSellerView-C8DEZmUW.js  AmazonSellerView-CGu0uHSb.js  AmazonSellerView-DoBYjGDy.css  AmazonSellerView-EPQC6mZM.js  AmazonSellerView-kgPKNakT.js  AmazonSellerView-lZB18EpG.js  BarcodeScannerView-B4WTGjio.js  BarcodeScannerView-BHqY3YQi.css  BarcodeScannerView-BMMKIbdp.js  BarcodeScannerView-BVB_L3lv.css  BarcodeScannerView-BgkJfaNI.css  BarcodeScannerView-Bn4VT1Op.js  BarcodeScannerView-BuDlkIIK.js  BarcodeScannerView-COT8Us8q.js  BarcodeScannerView-ChZwqOMO.css  BarcodeScannerView-Cyq2_QGn.js  BarcodeScannerView-DNiS7NCA.js  BarcodeScannerView-DR-I5Iqw.js  BarcodeScannerView-DXbxOv4b.js  BarcodeScannerView-Dz6ePMHy.js  BarcodeScannerView-KYKir4HY.js  BatchView-B32E0pyu.js  (+202 more)
public/: sample-shipments.csv
scripts/: convert-chatgpt-images.sh  create-zones.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+35 files in other folders)
